# presentations

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  azure.yaml  presentations.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yaml
.speckit/: constitution.md
.speckit/specifications/: ai101.spec.md  ai_productivity_boost.spec.md
infra/: azure.yaml  main.bicep  main.parameters.json
infra/core/ai/: foundry.bicep
infra/hooks/: postprovision.ps1  postprovision.sh
src/: animations.py  cli.py  images.py  renderer.py  slides.py  spec_parser.py  spec_writer.py
src/presentations/: __init__.py  __main__.py  enrichment.py  images.py  renderer.py  rich_layouts.py  slides.py  spec_writer.py  style.py
tests/: test_animations.py  test_cli.py  test_enrichment.py  test_images.py  test_renderer.py  test_slides.py  test_spec_parser.py  test_spec_writer.py  test_style.py
